<resources>
    <string name="app_name">Layout Samples</string>
    <string name="name">Name:</string>
    <string name="home_planet">Home Planet</string>
    <string name="android_programmer">Are you a Android Programmer?</string>
    <string name="favorite_food">Favorite Food:</string>
    <string name="do_something">Do something useful with the Data</string>
    <string name="url">URL:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="button_form_bottom_then_top">Linear:Bottom then Top</string>
    <string name="button_linear_form">Linear:Form</string>
    <string name="button_stacked_percent">Linear:Statcked Percent</string>
    <string name="button_linear_url_dialog">Linear: Url Dialog</string>
    <string name="button_relative_bottom_then_top">Relative: Bottom then Top</string>
    <string name="button_relative_overlap">Relative: Overlap</string>
    <string name="button_relative_url_dialog">Relative: Url Dialog</string>
    <string name="button_table_form">Table: Form</string>
    <string name="button_table_url_dialog">Table: Url Dialog</string>
    <string name="button_constraint_bottom_then_top">Constrain: Bottom then Top</string>
    <string name="button_constraint_url_dialog">Constraint: Url Dialog</string>
    <string name="fifty_percent">Fifty Percent</string>
    <string name="thirty_percent">Thirty Percent</string>
    <string name="twenty_percent">Twenty Percent</string>
    <string name="button_constraint_stacked_percent">Constraint: Stacked Percent</string>
</resources>
