<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/linear_bottom_then_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_form_bottom_then_top" />

        <Button
            android:id="@+id/linear_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_linear_form" />

        <Button
            android:id="@+id/linear_stacked_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_stacked_percent" />

        <Button
            android:id="@+id/linear_url_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_linear_url_dialog" />

        <Button
            android:id="@+id/relative_bottom_then_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_relative_bottom_then_top" />

        <Button
            android:id="@+id/relative_overlap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_relative_overlap" />

        <Button
            android:id="@+id/relative_url_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_relative_url_dialog" />

        <Button
            android:id="@+id/table_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_table_form" />

        <Button
            android:id="@+id/table_url_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_table_url_dialog" />

        <Button
            android:id="@+id/constraint_bottom_then_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_constraint_bottom_then_top" />

        <Button
            android:id="@+id/constraint_url_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_constraint_url_dialog" />

        <Button
            android:id="@+id/constraint_stacked_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/button_constraint_stacked_percent" />
    </LinearLayout>
</ScrollView>